name:                carter
version:             0.1.0.0
synopsis:            Processing CSV data
description:         Baseball data
license:             MIT
license-file:        LICENSE
author:              Michael Ruggiero
maintainer:          mjamesruggiero
copyright:           2015, Michael Ruggiero
category:            Data
build-type:          Simple
cabal-version:       >=1.8

executable carter
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base ==4.6.*,
                       bytestring,
                       vector,
                       cassava
  default-language:    Haskell2010
