name:                carter
version:             0.1.0.0
synopsis:            Processing CSV data
description:         Baseball data
license:             MIT
license-file:        LICENSE
author:              Michael Ruggiero
maintainer:          mjamesruggiero
copyright:           2015, Michael Ruggiero
category:            Data
build-type:          Simple
cabal-version:       >=1.8

executable carter
  main-is:             Main.hs
  ghc-options:         -rtsopts
  build-depends:       base,
                       carter,
                       bytestring,
                       cassava
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
    ghc-options:       -Wall
    type:              exitcode-stdio-1.0
    main-is:           Tests.hs
    hs-source-dirs:    tests
    build-depends:     base,
                       carter,
                       hspec >= 2.0 && < 2.1
    default-language:  Haskell2010

library
    ghc-options:       -Wall
    exposed-modules:   Carter
    build-depends:     base >= 4.6 && <5,
                       bytestring,
                       vector,
                       cassava
    hs-source-dirs:    src
    default-language:  Haskell2010
